Completely reworked version of the z-wave plugin. Much more robust and stable now. Only works on Linux for now.

--- a/zwave.conf
+++ b/zwave.conf
@@ -1,14 +1,15 @@
 [general]
 id = 8480f412-73bb-4aa5-96db-0eef749ea8a4
-report_values =
-logging = False
+report_values = 
+loglevel = debug
 
 [serial]
 port = COM2
 
 [broker]
-host=127.0.0.1
-port=5672
-username=guest
-password=guest
-vhost=/
+host = 127.0.0.1
+port = 5672
+username = guest
+password = guest
+vhost = /
+
