Added Windows service support, changed config file

--- a/zwave.conf
+++ b/zwave.conf
@@ -1,15 +1,16 @@
+[report_values]
+
 [general]
-id = 8480f412-73bb-4aa5-96db-0eef749ea8a4
-report_values = 
 loglevel = debug
+id = f0cf40b9-e8c6-4c01-a7cb-a41112e07d24
 
 [serial]
-port = COM2
+port = /dev/ttyUSB0
 
 [broker]
-host = 127.0.0.1
-port = 5672
 username = guest
-password = guest
 vhost = /
+host = 127.0.0.1
+password = guest
+port = 5672
 
